# mps-api-gateway

./: .gitignore  CMakeLists.txt  TODO.txt  mps-api-gateway.service
cmake/: Findrpclib.cmake  UseODB.cmake
include/: APIGateway.h  Account.h  Accounts.h  AuthenticationAPI.h  Crypto.h  FaucetAPI.h  IPHubAPI.h  Ip.h  ResponseError.h  RpcError.h  Security.h  UserAuthAPI.h  WalletMgrAPI.h
include/odb/: device.h  ip.h  ip_to_location.h  user.h
scripts/: setup.sh  uninstall.sh
src/: APIGateway.cpp  Accounts.cpp  AuthenticationAPI.cpp  Crypto.cpp  FaucetAPI.cpp  IPHubAPI.cpp  RpcError.cpp  Security.cpp  UserAuthAPI.cpp  WalletMgrAPI.cpp  main.cpp
unit_tests/: CMakeLists.txt  doctest.h  unit_tests.cpp
